[package]
name = "weatherinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
exitfailure = "0.5.1"
reqwest = { version = "0.11.13", features=["json"] }
serde = "1.0.152"
serde_json = "1.0.91"
serde_derive = "1.0.152"
tokio = { version = "1.24.1", features=["full"]}
chrono = "0.4.23"